Bug 70886 - UI: Detective Trace inadequate display
Summary: UI: Detective Trace inadequate display
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Noel Power
URL:
Whiteboard: BSA target:5.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2013-10-26 09:14 UTC by Ady
Modified: 2015-12-17 07:33 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ady 2013-10-26 09:14:24 UTC
Problem description: 

Detective Trace arrows displayed in inadequate position, cause more confusion.

Steps to reproduce:

1_ Start a new spreadsheet with 2 sheets, with the zoom at %100.
2_ On "Sheet2.E20" insert the following formula: "=Sheet1.E20" (without quotation marks).
3_ Select "Sheet2.E20".
4_ Press "Shift+F7", (Trace Precedents). Note the position of the trace arrow.
5_ Change the zoom, from %100 to either %90 or to %110. Note the (new?) position of the trace arrow.
6_ Change the zoom back to %100. Note the (new?) position of the trace arrow.
7_ Go to Tools -> Detective -> Refresh Traces. Note the (new?) position of the trace arrow.

If the test cell is "A1" instead of "E20", the trace arrow might disappear from the screen when changing the zoom, until the next "Refresh Traces".


Current behavior:

In my system, step 5 incorrectly changes the displayed position of the trace arrow, step 6 maintains the inadequate position, and step 7 "corrects" it. Additionally, performing some other tasks (e.g. copy+paste) might refresh the trace arrows too (but I'm not sure whether *any* task will).

In fact, the initial and/or ending zoom(s) can be any other than %100 too, as *any* zoom change generates this issue.

In the above steps I used "Trace Precedents". I see the same effect when selecting "Sheet1.E20" and using "Trace Dependents" instead.


Expected behavior:

This displacement should not happen, specially with "AutoRefresh" (traces) set on.

The “Detective” feature in LibreOffice is already very limited; it should at least work as expected and not make it harder for the user.


Additional info:

I originally posted a question to confirm whether this was happening to other users too (it does). The original email thread can be accessed through one of the following:

Nabble:
http://nabble.documentfoundation.org/CALC-Detective-Trace-inadequate-display-tp4079815.html


Mail-Archive:
http://www.mail-archive.com/users@global.libreoffice.org/msg34292.html

Gmane:
http://article.gmane.org/gmane.comp.documentfoundation.libreoffice.user/34541
http://news.gmane.org/find-root.php?message_id=%3cBLU0%2dSMTP472CC1809DA0F90BD5354498B0D0%40phx.gbl%3e

ListArchives:
http://listarchives.libreoffice.org/global/users/msg34118.html

TIA,
Ady.
Operating System: All
Version: 4.0.6.2 rc
Last worked in: 3.5 all versions
Comment 1 Mirosław Zalewski 2013-10-27 10:56:38 UTC
Confirmed by 3 different people on LO-users mailing list, therefore NEW. I have also added appropriate whiteboard and keyowrds contents.

Bibisect log:
#v+
$ git bisect bad 5655f1571312ca27537c9c147c69d6431986b76d is the first bad commit
commit 5655f1571312ca27537c9c147c69d6431986b76d
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Tue Dec 11 08:13:31 2012 +0000

    source-hash-b67a51b40a4876f4bd97a2917103112006710b0c
    
    commit b67a51b40a4876f4bd97a2917103112006710b0c
    Author:     Markus Maier <maier@fs.ei.tum.de>
    AuthorDate: Thu Nov 29 16:10:23 2012 +0000
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Thu Nov 29 17:35:25 2012 +0000
    
        add sort tab page .ui
    
        Change-Id: Ib5471b2a4cae45cf8aa32b438bac7f5cda35f71a

:100644 100644 7a4fdcf1d95f530a3149d02b8fe7971875973e76 42f18f15fb3370ca3f85d6a637b17ae05b10996f M      autogen.log
:100644 100644 5f05b5eaceb8a57fa910addc049fe1ff83b05b8a 820b9e1d79db3dba2880de552a311faa29bbf809 M      ccache.log
:100644 100644 613cffd64bfbd22a56a066164e70370f23603226 8a6e4f4cb7119b66a81a7c836167c86a3bc97882 M      commitmsg
:100644 100644 70bef30ec00af18be350b77f58e9c5bf02a109b4 2482442714ae1b18d33e19012abd7640f509afb4 M      dev-install.log
:100644 100644 709b8855043c670f0ccb34fe1427dccea58ff66a 95a1b31e755e1b56e4b0dc135d0b2769194481b9 M      make.log
:040000 040000 0e347c259b7b09c8cdb9b92ea62838dd657d0fb7 2ce4b89c04c797a3f31ec93b5ce499f4d0c9abd4 M      opt
$ git bisect log
# bad: [5b4b36d87517a6ea96ff8c84c46b12f462fc9a1a] source-hash-8450a99c744e9005f19173e4df35d65640bcf5c4
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9] source-hash-099198a4224778fe6e43f5dc13b5b9b1b4dc828c
git bisect good 16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9
# good: [f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a] source-hash-a581d31b227623e09d2970a91214fda398f98eda
git bisect good f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a
# good: [114fd3b76bcba890e6d702d00cef910f1493c262] source-hash-64ab96cd15e52da88781e720d6f031dbcd0ba902
git bisect good 114fd3b76bcba890e6d702d00cef910f1493c262
# good: [47498a36f7af8f54e6e3dda89cd4708802a409e6] source-hash-19f4ebd8a54da0ae03b9cc8481613e5cd20ee1e7
git bisect good 47498a36f7af8f54e6e3dda89cd4708802a409e6
# good: [66083171ba534818399937597388d325091fffab] source-hash-9d83ad0e99ab182506be99f7d6a2bec7f6fbe8c6
git bisect good 66083171ba534818399937597388d325091fffab
# bad: [8407d6926d9fa83ebbd8e03de319ea63df131753] source-hash-3d4288c1c0b593421c7f6619c88584bdb7c53337
git bisect bad 8407d6926d9fa83ebbd8e03de319ea63df131753
# good: [ec7d01ea25190e36518df830ed84b791b2417e2e] source-hash-c33019b36d613f951787ce9836e34d74bfbd6a1b
git bisect good ec7d01ea25190e36518df830ed84b791b2417e2e
# bad: [5655f1571312ca27537c9c147c69d6431986b76d] source-hash-b67a51b40a4876f4bd97a2917103112006710b0c
git bisect bad 5655f1571312ca27537c9c147c69d6431986b76d
# first bad commit: [5655f1571312ca27537c9c147c69d6431986b76d] source-hash-b67a51b40a4876f4bd97a2917103112006710b0c
#v-
Comment 2 Stéphane Guillou (stragu) 2013-12-12 06:16:24 UTC
I can confirm this behaviour in 4.0.5.2 too.
Comment 3 Markus Mohrhard 2013-12-12 18:34:46 UTC
The primary suspect based on the bibisect results would be c4e649f0cd013e86adbd794859bcc3cb9ee3aa61 but the calc drawing layer is an ugly beast so I might be wrong.
Comment 4 Ady 2014-07-19 18:16:59 UTC
I am just posting to report that this bug is still present (in several versions).

FWIW, the Detective feature is useless when using more than one sheet. This shortcoming limits the effective use of Calc for multiple-sheet spreadsheets, as when more than a few bunch of simple formulas is used, the Detective feature is fundamental / indispensable so to track down the relations (and their changes) between sheets. Of course, this paragraph is about the Detective feature in general, not just about this particular bug.
Comment 5 Stéphane Guillou (stragu) 2014-07-20 06:49:19 UTC
Hi Ady

It would be great if you could tell us which versions exactly you confirmed the bug on.

Cheers
Comment 6 Ady 2014-07-20 09:51:20 UTC
(In reply to comment #5)
> It would be great if you could tell us which versions exactly you confirmed
> the bug on.
 
I am the original reporter of this bug. Currently the "version" field in this bug report #70886 is set to 4.0.0.0.alpha1. There is a bisect log posted.

Nothing has been effectively done to resolve this bug (nor to improve the Detective Trace feature when using multiple sheets), so it is present in every version (at least) since then. So, "specific versions" where this bug is present and confirmed would be "every version since the 'version' field" (at least).

To be clear, I have updated LO several times, and this bug was/is still present (re-tested after every update). I just wanted to "bump" this bug report, hoping that at some point the whole Detective (Trace) feature will be improved. Currently, it is very difficult to edit complex multiple-sheet spreadsheets without the Detective feature.
Comment 7 Matthew Francis 2015-01-10 05:24:59 UTC
As suggested above in comment 3, building from source confirms that the behaviour changed in the below commit.

Adding a Cc: to nopower@novell.com; I'm not sure if you're still involved in LO development, but if you are could you possibly have a look at this? Thanks


commit c4e649f0cd013e86adbd794859bcc3cb9ee3aa61
Author: Noel Power <noel.power@suse.com>
Date:   Tue Nov 27 17:56:33 2012 +0000

    Sync draw object to calc grid for better alignment when zooming
Comment 8 Commit Notification 2015-04-17 11:08:09 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=004381ddff4e926972a7a9d14915bb2f4638b1e5

fix for fdo#70886

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 07:33:03 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]