fix for fdo#70886

detective shape thingies set an anchor (with an invalid start address)
no idea why, it seems intentional (for the case where the dependant stuff
is on another tab) This screws up the alignment for zoom logic

Change-Id: I0f2356da69caf705003e81c4f8020c466e031d69
Signed-off-by: Noel Power <noel.power@suse.com>